# lintsampler

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  gridsample.py  pyproject.toml  sample.py  test_requirements.txt  unitsample_1d.py  unitsample_kd.py  utils.py
.github/workflows/: draft-pdf.yml  pypi_publish.yaml  test.yaml
docs/: environment.yml
docs/plots/: 1D_animation.py  1D_cdf.py  1D_pdf.py  2D_animation.py  2D_conditional.py  2D_marginal.py  2D_pdf.py  2D_sampling.py  error_scaling_1D.py  error_scaling_2D.py  error_scaling_2D_data.npz  error_scaling_2D_qmc.py  error_scaling_2D_qmc_data.npz  figstyle.mplstyle  lint1Dunit_animation.py  lint1Dunit_pdf.py  lint_transformation.py  lintkDunit_interpolant.py  worked_example_cellprobs.py  worked_example_cellzoom.py  worked_example_grid.py  worked_example_pdf.py
docs/source/: attribution.md  attribution.rst  conf.py  densitygrid.md  densitystructure.md  densitytree.md  gridsample.md  gridsample.rst  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  lintsampler.md  lintsampler.rst  modules.rst  sample.md  sample.rst  usage.md  usage.rst  whentouse.md
examples/: 1D_GMM.ipynb  1_gmm.ipynb  2_doughnuts.ipynb  3_dark_matter.ipynb  figstyle.mplstyle
paper/: paper.bib  paper.md
src/lintsampler/: __init__.py  density_grid.py  density_structure.py  density_tree.py  freesample.py  grid.py  gridsample.py  lintsampler.py  (+5 more)
tests/: test_datastructure.py  test_densitystructure.py  test_densitytree.py  test_freesample.py  test_gridsample.py  test_lintsampler.py  test_sample.py
(+19 files in other folders)
